@@ -82,6 +82,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 12370) Add throttle on password attempts. Defaults to max 5 attempts in 5 minutes.
 * (bug 15016) 'Templates used on this page' list in view source should be wrapped 
   in a div with class "templatesUsed"
+* (bug 14868) Setting $wgFeedDiffCutoff to 0 now disables generation of the diff
+  entirely, not just the display of it.
 
 === API changes in 1.14 ===
 
